canvas is now not visible to user because of ios issues

--- a/src/components/Canvas/styles.scss
+++ b/src/components/Canvas/styles.scss
@@ -1,7 +1,3 @@
 #canvas {
-  width: 100%;
-  max-width: 100vw;
-  height: 100%;
-  max-height: 100%;
-  border: 1px solid black;
+  display: none;
 }
